--- a/EmployeeApplication/src/main/resources/application.properties
+++ b/EmployeeApplication/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:employee
+
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
